refactor(bank-soal): penempatan soal pindah ke paket_item per versi Paket
question tidak lagi membawa paket_id/topic_id/position. Setiap Paket punya
satu versi kerja (paket_version) dan tiap soal ditempatkan lewat paket_item
(versi, topic, posisi). Satu soal kini boleh hidup di banyak versi dan Paket
tanpa disalin — prasyarat versi Paket dan akses referensi (ADR-0021, Fase 1).

Batas tenant pindah ke FK komposit paket_item_same_owner dan
paket_item_question_owner (pola V9). Perilaku layanan tidak berubah; seluruh
query per Paket/Topic menjoin paket_item. Seed lokal V901/V902 ditulis ulang
ke skema ini (sudah basi sejak V8).

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HmN4oyLShPkNkvSH8iU3gb